updated readme, changelog and version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aws-lambda-with-dynamodb",
-  "version": "1.0.0",
-  "description": "Serverless AWS Lambda with Dynamodb example using Typescript",
+  "version": "0.0.1",
+  "description": "AWS Lambda CRUD operations with Dynamodb and AWS APIGateway usingServerless Framework v2.16.x and TypeScript",
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
