--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "AWS Lambda CRUD operations with Dynamodb and AWS APIGateway usingServerless Framework v2.16.x and TypeScript",
   "main": "handler.js",
   "scripts": {
+    "start": "sls offline start --port 4000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "source-map-support": "~0.5.19"
+    "aws-lambda": "~1.0.6",
+    "source-map-support": "~0.5.19",
+    "uuid": "~8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "~2.16.0",
     "@types/aws-lambda": "~8.10.67",
     "@types/node": "~14.14.14",
+    "@types/uuid": "~8.3.0",
     "fork-ts-checker-webpack-plugin": "~6.0.0",
+    "serverless": "~2.16.0",
+    "serverless-offline": "~6.8.0",
     "serverless-webpack": "~5.3.5",
     "ts-loader": "~8.0.12",
     "ts-node": "~9.1.1",
