--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "aws-lambda": "~1.0.6",
-    "source-map-support": "~0.5.19",
     "uuid": "~8.3.2"
   },
   "devDependencies": {
@@ -25,8 +24,9 @@
     "ts-node": "~9.1.1",
     "typescript": "~4.1.3",
     "webpack": "~5.11.0",
+    "source-map-support": "~0.5.19",
     "webpack-node-externals": "~2.5.2"
   },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
+  "author": "kumaran",
   "license": "MIT"
 }
