--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "aws-lambda": "~1.0.6",
-    "uuid": "~8.3.2"
+    "uuid": "~8.3.2",
+    "source-map-support": "~0.5.19"
   },
   "devDependencies": {
     "@serverless/typescript": "~2.16.0",
@@ -24,7 +25,6 @@
     "ts-node": "~9.1.1",
     "typescript": "~4.1.3",
     "webpack": "~5.11.0",
-    "source-map-support": "~0.5.19",
     "webpack-node-externals": "~2.5.2"
   },
   "author": "kumaran",
