--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "aws-lambda": "~1.0.6",
-    "uuid": "~8.3.2",
-    "source-map-support": "~0.5.19"
+    "aws-sdk": "~2.821.0",
+    "source-map-support": "~0.5.19",
+    "uuid": "~8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "~2.16.0",
