--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aws-lambda-with-dynamodb",
   "version": "0.0.1",
   "description": "AWS Lambda CRUD operations with Dynamodb and AWS APIGateway usingServerless Framework v2.16.x and TypeScript",
-  "main": "handler.js",
+  "main": "src/handler.ts",
   "scripts": {
     "start": "sls offline start --port 4000",
     "test": "echo \"Error: no test specified\" && exit 1"
