--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aws-lambda": "~1.0.6",
     "aws-sdk": "~2.821.0",
+    "dotenv": "~8.2.0",
     "source-map-support": "~0.5.19",
     "uuid": "~8.3.2"
   },
