--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@serverless/typescript": "~2.16.0",
     "@types/aws-lambda": "~8.10.67",
     "@types/node": "~14.14.14",
+    "@types/serverless": "^1.78.17",
     "@types/uuid": "~8.3.0",
     "fork-ts-checker-webpack-plugin": "~6.0.0",
     "serverless": "~2.17.0",
