added environmental variables

--- a/.env-EXAMPLE
+++ b/.env-EXAMPLE
@@ -1,5 +1,8 @@
 ## Environment-specific configuration
 ## `.env` file should NEVER be commited to Git
-AWS_ACCOUNT_ID=
-AWS_REGION=
-TABLE_NAME=
+
+AWS_ACCOUNT_ID=<Your AWS Account Id>
+AWS_DB_REGION=us-east-1
+TABLE_NAME=to-do-list
+READ_CAPACITY=1
+WRITE_CAPACITY=1
